--- a/Restaurant.Booking/Restaurant.Booking.API/Restaurant.Booking.API.csproj
+++ b/Restaurant.Booking/Restaurant.Booking.API/Restaurant.Booking.API.csproj
@@ -11,10 +11,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Restaurant.Booking.DAL\Restaurant.Booking.DAL.csproj" />
+    <ProjectReference Include="..\Restaurant.Booking.BL\Restaurant.Booking.BL.csproj" />
   </ItemGroup>
 
 
